--- a/admin/view/default/agent/addFrom.html
+++ b/admin/view/default/agent/addFrom.html
@@ -1,28 +1,26 @@
 {{include file='common/head.html'}}
 <div align="center">
-  <form  name='reg' action="?c=agent&a=addAgent&id={{$agent[0].id}}" method='post'>
-<div class="head_block tb_wid">&nbsp;增加代理级别:</div>
-<div class="block tb_wid">
- <table id="table_2" cellpadding="0" cellspacing="1">
- 	{{if $edit}}
- 	  <tr>
-        <td class="td_bgc right_2">代理ID:</td> 
-        <td class="td_bgc right_2">{{$agent[0].id}}</td>
-       </tr>
-       {{/if}}
-       
-       <tr>
-        <td class="td_bgc right_2" valign="top">代理名称:</td>
-        <td class="td_bgc right_2">
-       <input name="name" type="text" size="25" value="{{$agent[0].name}}" />
-       	</td>
-     	</tr>
-      <tr>
-	    <td class="td_bgc td_hg" colspan="2" align="center">
-		 <input type="submit" value="确认" />
-		</td>
-      </tr>
-      
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：系统设置 --> 增加代理级别 </div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		  <form  name='reg' action="?c=agent&a=addAgent&id={{$agent[0].id}}" method='post'>
+			<tr>
+				<td colspan="2" class="bg_main"><b>增加代理级别</b></td>
+			</tr>
+			{{if $edit}}
+		  <tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<td>代理ID:</td> 
+			<td>{{$agent[0].id}}</td>
+		   </tr>
+		   {{/if}}
+		   <tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td class="wid_general" valign="top">代理名称:</td>
+				<td><input name="name" type="text" size="25" value="{{$agent[0].name}}" /></td>
+			</tr>
+		  	<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>&nbsp;</td><td><input type="submit" value="确认" />
+			</td>
+		  </tr>
     </table>
 	</div>
 	</form>
