--- a/admin/view/default/agent/listagent.html
+++ b/admin/view/default/agent/listagent.html
@@ -1,32 +1,29 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="container">
-	<div align="center">
-		<div class="mar_top tb_wid5" align="right">
-			<div align="left"><a href="?c=agent&a=addAgentFrom">增加代理级别</a></div>
-				<div class="block tb_wid6">
-				<table id="table" border="0" cellpadding="0" cellspacing="1">
-					<tr id="ttitle">
-					<td class="td_bgc right_2">操作</td>
-					<td class="td_bgc right_2">代理id号</td>
-					<td class="td_bgc right_2">代理名称</td>
-					</tr>
-					
-					{{for $i=0;$i< count($agents);$i++}}
-					<tr>
-					<td class="td_bgc right_2">
-						[<a href='javascript:if(confirm("真的要删除?")){ window.location="?c=agent&a=delAgent&id={{$agents[$i].id}}";}'>删除</a>]
-						[<a href="?c=agent&a=addAgentFrom&id={{$agents[$i].id}}">修改</a>]
-					</td>
-					<td class="td_bgc right_2">{{$agents[$i].id}}</td>
-					<td class="td_bgc right_2">{{$agents[$i].name}}</td>
-					{{/for}}
-					</tr>
-				</table>
-				</div>
-			</div>
-		</div>
-		</div>
+<div align="center">
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：系统设置 --> 首页设置</div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+			<tr>
+				<td colspan="3" class="bg_main"><a href="?c=agent&a=addAgentFrom"><b>[增加代理级别]</b></a></td>
+			</tr>
+			<tr class="bg_yellow">
+				<td>操作</td>
+				<td>代理id号</td>
+				<td>代理名称</td>
+			</tr>
+				{{for $i=0;$i< count($agents);$i++}}
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>
+					[<a href='javascript:if(confirm("真的要删除?")){ window.location="?c=agent&a=delAgent&id={{$agents[$i].id}}";}'>删除</a>]
+					[<a href="?c=agent&a=addAgentFrom&id={{$agents[$i].id}}">修改</a>]
+				</td>
+				<td>{{$agents[$i].id}}</td>
+				<td>{{$agents[$i].name}}</td>
+				{{/for}}
+			</tr>
+		</table>
+	</div>
+</div>
 </body>
-
 </html>
