--- a/admin/view/default/common/head.html
+++ b/admin/view/default/common/head.html
@@ -6,4 +6,5 @@
 <!-- 定义链接样式表 -->
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/style.css" type="text/css"/>
 <link rel="stylesheet" rev="stylesheet" href="{{$PSTATIC}}/style/style2.css" type="text/css"/>
+<script language='javascript' src='{{$PSTATIC}}/style/fun_normal.js'></script>
 </head>
