--- a/admin/view/default/mproductorder/pagelistmproductorder.html
+++ b/admin/view/default/mproductorder/pagelistmproductorder.html
@@ -1,79 +1,58 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="container">
-	<div align="center">
-
-		<div class="mar_top tb_wid5" align="right">
-		<div align="left">
-		<form name='orderform' action="?c=mproductorder&a=pageListMproductorder" method="post">
-			<span class="topimg STYLE1">用户名搜索:</span><input name='username' type='text'>&nbsp;<input type='submit' value="提交">
-		</form>
-		
-		</div>
-		
-
-			{{if $page>1}}
-			<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&&page=0'>首页</a> 
-			<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&page={{$page-1}}'>上一页</a> 
-			{{else}}
-			首页 上一页 
-			{{/if}}
-			{{if $page!=$total_page}} 
-			<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&page={{$page+1}}'>下一页</a>
-			<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&page={{$total_page}}'>尾页</a>
-			{{else}}下一页 尾页
-			{{/if}} 
-			{{$page}}/{{$total_page}}&nbsp;
-			共计{{$count}}记录
-		</div>
-
-		<div class="block tb_wid5">
-				<table id="table" border="0" cellpadding="0" cellspacing="1">
-			
-					<tr id="ttitle">
-					<td class="right_2">操作</td>	
-					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=id'>订单ID</a></td>
-					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=username'>用户名</a></td>
-					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=product_id'>产品名称</a></td>
-					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=create_time'>提交时间</a></td>
-					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=status'>状态</a></td>
-					</tr>
-					
-					
-					{{foreach from=$list item=row}}
-					<tr>
-					<td class="right_2">
-					<!--  	[<a href="javascript:if(confirm('确定?')){location='?c=mproductorder&a=delMproductorder&id={{$row.id}}';}" >删除</a>]-->
-						[<a href="?c=mproductorder&a=addMproductorderFrom&id={{$row.id}}" >更改</a>]
-					</td>
-					<td class="right_2">{{$row.id}}</td>
-					<td class="right_2">{{$row.username}}</td>
-					<td class="right_2">{{$row.product_name}}</td>
-					<td class="right_2">{{$row.create_time}}</td>
-					<td class="right_2">{{if $row.status==0}}<a href="?c=mproductorder&a=addMproductorderFrom&id={{$row.id}}">等待交付</a>{{else}}已交付{{/if}}</td>
-					</tr>
-					{{/foreach}}
-					
-		  		</table>
-		</div>
-		
-		<div class="mar_top tb_wid5" align="right">
-			{{if $page>1}}
-			<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&&page=0'>首页</a> 
-			<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&page={{$page-1}}'>上一页</a> 
-			{{else}}
-			首页 上一页 
-			{{/if}}
-			{{if $page!=$total_page}} 
-			<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&page={{$page+1}}'>下一页</a>
-			<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&page={{$total_page}}'>尾页</a>
-			{{else}}下一页 尾页
-			{{/if}} 
-			{{$page}}/{{$total_page}}&nbsp;
-			共计{{$count}}记录
-		</div>
-		
-		
+<div align="center">
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：非自动化产品 --> 订单列表</div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+			<tr>
+				<form name='orderform' action="?c=mproductorder&a=pageListMproductorder" method="post">
+				<td colspan="6" class="bg_yellow  hg_main">
+					<span class="topimg STYLE1">用户名搜索:</span><input name='username' type='text'>&nbsp;<input type='submit' value="提交">
+				</td>
+				</form>
+			</tr>
+			<tr>
+				<td colspan="6" class="bg_main"><b>订单列表</b></td>
+			</tr>
+			<tr class="bg_yellow">
+				<td>操作</td>	
+				<td><a href='?c=mproductorder&a=pageListMproductorder&order=id'>订单ID</a></td>
+				<td><a href='?c=mproductorder&a=pageListMproductorder&order=username'>用户名</a></td>
+				<td><a href='?c=mproductorder&a=pageListMproductorder&order=product_id'>产品名称</a></td>
+				<td><a href='?c=mproductorder&a=pageListMproductorder&order=create_time'>提交时间</a></td>
+				<td><a href='?c=mproductorder&a=pageListMproductorder&order=status'>状态</a></td>
+			</tr>
+			{{foreach from=$list item=row}}
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>
+				<!--  	[<a href="javascript:if(confirm('确定?')){location='?c=mproductorder&a=delMproductorder&id={{$row.id}}';}" >删除</a>]-->
+					[<a href="?c=mproductorder&a=addMproductorderFrom&id={{$row.id}}" >更改</a>]
+				</td>
+				<td>{{$row.id}}</td>
+				<td>{{$row.username}}</td>
+				<td>{{$row.product_name}}</td>
+				<td>{{$row.create_time}}</td>
+				<td>{{if $row.status==0}}<a href="?c=mproductorder&a=addMproductorderFrom&id={{$row.id}}">等待交付</a>{{else}}已交付{{/if}}</td>
+			</tr>
+				{{/foreach}}
+			<tr>
+				<td colspan="6" class="bg_yellow" align="right">
+					{{if $page>1}}
+					<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&&page=0'>首页</a> 
+					<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&page={{$page-1}}'>上一页</a> 
+					{{else}}
+					首页 上一页 
+					{{/if}}
+					{{if $page!=$total_page}} 
+					<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&page={{$page+1}}'>下一页</a>
+					<a href='?c=mproductorder&a=pageListMproductorder&order={{$order}}&page={{$total_page}}'>尾页</a>
+					{{else}}下一页 尾页
+					{{/if}} 
+					{{$page}}/{{$total_page}}&nbsp;
+					共计{{$count}}记录&nbsp;
+				</td>
+			</tr>
+		</table>
 	</div>
 </div>
 </body>
