--- a/admin/view/default/msg.html
+++ b/admin/view/default/msg.html
@@ -1,7 +1,7 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div align="center"><br />
-<div class="block tb_wid mar_top" align="center"> 
+<div class="block wid5 mar_top" align="center"> 
  <font color='red'>{{$msg}}</font>
 </div>
 </div>
