--- a/admin/view/default/user/userlist.html
+++ b/admin/view/default/user/userlist.html
@@ -1,79 +1,76 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0' onLoad="javascript:form1.username.focus();">
-<div id="container">
-	<div align="center">
-		<form name="form1" method="post" action="?c={{$smarty.request.c}}&a=listUser">
-		<div class="head_block3">
-		<p align="center">
-		 <span class="topimg STYLE1">用户名:</span>
-    	<input name="username" type="text" id="username" value="{{$username}}" size="35">
-    	<input type="submit" name="Submit" value="搜索">
-    	</p>
-		 </form>
-	</div>
-
-{{if $msg}}
 <div align="center">
-<div class="block tb_wid mar_top" align="center"> 
-  <font color='red'>{{$msg}}</font>
-</div>
-</div>
-{{/if}}
- {{if $sum>0}}
-
-  {{foreach from=$list item=row}}
-<div class="head_block tb_wid">&nbsp;用户信息</div>
-<div class="block tb_wid">
-<table id="table_2" cellpadding="0" cellspacing="1">
-      <tr>
-        <td class="td_bgc td_hg" colspan="2" align="center">
-        [<a href="?c=user&a=editForm&username={{$row.username}}" title="更改信息">更改</a>]
-        [<a href='javascript:if(confirm("真的要重设用户密码吗")){ window.location="?c=user&a=randPassword&username={{$row.username}}";}'>重设密码</a>]
-        [<a href="?c=user&a=impLogin&username={{$row.username}}" target="_blank">模拟登录</a>]
-        </td>
-      </tr>
-      <tr>
-        <td class="td_bgc right_2">用户名：</td>
-        <td class="td_bgc right_2"><a href="?c=user&a=editForm&username={{$row.username}}">{{$row.username}}</a></td>
-      </tr>
-      <tr>
-        <td class="td_bgc right_2">代理身份：</td>
-        <td class="td_bgc right_2">
+  	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：用户管理 --> 用户查询</div>
+		<form name="form1" method="post" action="?c={{$smarty.request.c}}&a=listUser">
+			<div class="search mar_main">
+				<p align="center">
+					 <span class="topimg STYLE1">用户名:</span>
+					<input name="username" type="text" id="username" value="{{$username}}" size="35">
+					<input type="submit" name="Submit" value="搜索">
+				</p>
+			</div>
+		 </form>
+		{{if $msg}}
+			<div class="block mar_top red" align="center">{{$msg}}</div>
+		{{/if}}
+	{{if $sum>0}}
+	{{foreach from=$list item=row}}
+		<table class="table_main2" cellpadding="0" cellspacing="1">
+			<tr>
+				<td colspan="2" class="bg_main"><b>用户信息</b></td>
+			</tr>
+			<tr class="main_bgcolor">
+				<td colspan="2" align="center">
+					<b><a href="?c=user&a=editForm&username={{$row.username}}" title="更改信息">[更改]</a></b>
+					<b><a href='javascript:if(confirm("真的要重设用户密码吗")){ window.location="?c=user&a=randPassword&username={{$row.username}}";}'>[重设密码]</a></b>
+					<b><a href="?c=user&a=impLogin&username={{$row.username}}" target="_blank">[模拟登录]</a></b>
+				</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td class="wid_general">用户名：</td>
+				<td><a href="?c=user&a=editForm&username={{$row.username}}">{{$row.username}}</a></td>
+			</tr>
 			<form action='?c=user&a=changUserAgent&username={{$row.username}}' method='post' name='agentform'>
-			<select name='agent_id' onChange="javascript:agentform.submit()">
-				<option value="0" >无</option>
-				{{for $i=0;$i< count($agents);$i++}}
-				<option value="{{$agents[$i].id}}" {{if $row.agent_id==$agents[$i].id}}selected{{/if}}>{{$agents[$i].name}}</option>
-				{{/for}}
-			 </select>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>代理身份：</td>
+				<td>
+					<select name='agent_id' onChange="javascript:agentform.submit()">
+						<option value="0" >无</option>
+						{{for $i=0;$i< count($agents);$i++}}
+						<option value="{{$agents[$i].id}}" {{if $row.agent_id==$agents[$i].id}}selected{{/if}}>{{$agents[$i].name}}</option>
+						{{/for}}
+					 </select>
+				</td>
+			</tr>
 			</form>
-		</td>
-      </tr>
-      <tr>
-        <td class="td_bgc right_2">真实姓名：</td>
-        <td class="td_bgc right_2">{{$row.name}}</td>
-      </tr>
-	  <tr>
-        <td class="td_bgc right_2">身份号码</td>
-        <td class="td_bgc right_2">{{$row.id}}</td>
-      </tr>
-	  <tr>
-        <td class="td_bgc right_2">电子邮件</td>
-        <td class="td_bgc right_2">{{$row.email}}</td>
-      </tr>
-	  <tr>
-        <td class="td_bgc right_2">注册时间</td>
-        <td class="td_bgc right_2">{{$row.regtime}}</td>
-      </tr>
-	  <tr>
-        <td class="td_bgc right_2">余额</td>
-        <td class="td_bgc right_2"><a href="?c=user&a=editMoneyForm&username={{$row.username}}">{{$row.money/100}}元</a></td>
-      </tr>
-	    {{/foreach}}
-</table>
- </div>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>真实姓名：</td>
+				<td>{{$row.name}}</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>身份号码</td>
+				<td>{{$row.id}}</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>电子邮件</td>
+				<td>{{$row.email}}</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>注册时间</td>
+				<td>{{$row.regtime}}</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>余额</td>
+				<td><a href="?c=user&a=editMoneyForm&username={{$row.username}}">{{$row.money/100}}元</a></td>
+			</tr>
+		</table>
+		{{/foreach}}
+	{{/if}}
+	</div>
 </div>
-{{/if}}
+
 
 
 </body>
