--- a/admin/view/default/user/userslist.html
+++ b/admin/view/default/user/userslist.html
@@ -1,61 +1,50 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="container">
-	<div align="center">
-		<div class="mar_top tb_wid4" align="right">
-				{{if $page>1}}
-				<a href='?c=user&a=pageUsers&page=0'>首页</a> 
-				<a href='?c=user&a=pageUsers&page={{$page-1}}'>上一页</a> 
-				{{else}}
-				首页 上一页 
-				{{/if}}
-				{{if $page!=$total_page}} 
-				<a href='?c=user&a=pageUsers&page={{$page+1}}'>下一页</a>
-				<a href='?c=user&a=pageUsers&page={{$total_page}}'>尾页</a>
-				{{else}}下一页 尾页
-				{{/if}} 
-				{{$page}}/{{$total_page}}&nbsp;
-				共计{{$count}}记录
-			</div>
-			<div class="block tb_wid4">
-				<table id="table" border="0" cellpadding="0" cellspacing="1">
-					<tr id="ttitle">
-						<td class="td_bgc right_2">用户名</td>
-						<td class="td_bgc right_2">代理级别</td>
-						<td class="td_bgc right_2">身份证</td>
-						<td class="td_bgc right_2">姓名</td>
-						<td class="td_bgc right_2">余额</td>
-						<td class="td_bgc right_2">email</td>
-						<td class="td_bgc right_2">注册时间</td>
-						</tr>
-						{{foreach from=$list item=row}}
-					<tr>
-						<td class="td_bgc right_2"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
-						<td class="td_bgc right_2">{{$row.agent_name}}</td>
-						<td class="td_bgc right_2">{{$row.id}}</td>
-						<td class="td_bgc right_2">{{$row.name}}</td>
-						<td class="td_bgc right_2">{{$row.money/100}}元</td>
-						<td class="td_bgc right_2">{{$row.email}}</td>
-						<td class="td_bgc right_2">{{$row.regtime}}</td>
-						</tr>
-						{{/foreach}}
-			  </table>
-			</div>
-			<div class="mar_top tb_wid4" align="right">
-			{{if $page>1}}
-			<a href='?c=user&a=pageUsers&page=0'>首页</a> 
-			<a href='?c=user&a=pageUsers&page={{$page-1}}'>上一页</a> 
-			{{else}}
-			首页 上一页 
-			{{/if}}
-			{{if $page!=$total_page}} 
-			<a href='?c=user&a=pageUsers&page={{$page+1}}'>下一页</a>
-			<a href='?c=user&a=pageUsers&page={{$total_page}}'>尾页</a>
-			{{else}}下一页 尾页
-			{{/if}} 
-			{{$page}}/{{$total_page}}&nbsp;
-			共计{{$count}}记录
-		</div>
+<div align="center">
+  	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：用户管理 --> 用户列表</div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+			<tr>
+				<td colspan="7" class="bg_main"><b>用户列表</b></td>
+			</tr>
+			<tr class="bg_yellow">
+				<td>用户名</td>
+				<td>代理级别</td>
+				<td>身份证</td>
+				<td>姓名</td>
+				<td>余额</td>
+				<td>email</td>
+				<td>注册时间</td>
+				</tr>
+				{{foreach from=$list item=row}}
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
+				<td>{{$row.agent_name}}</td>
+				<td>{{$row.id}}</td>
+				<td>{{$row.name}}</td>
+				<td>{{$row.money/100}}元</td>
+				<td>{{$row.email}}</td>
+				<td>{{$row.regtime}}</td>
+			</tr>
+				{{/foreach}}
+			<tr>
+				<td colspan="7" class="bg_yellow" align="right">
+					{{if $page>1}}
+					<a href='?c=user&a=pageUsers&page=0'>首页</a> 
+					<a href='?c=user&a=pageUsers&page={{$page-1}}'>上一页</a> 
+					{{else}}
+					首页 上一页 
+					{{/if}}
+					{{if $page!=$total_page}} 
+					<a href='?c=user&a=pageUsers&page={{$page+1}}'>下一页</a>
+					<a href='?c=user&a=pageUsers&page={{$total_page}}'>尾页</a>
+					{{else}}下一页 尾页
+					{{/if}} 
+					{{$page}}/{{$total_page}}&nbsp;
+					共计{{$count}}记录&nbsp;
+				</td>
+			</tr>
+		</table>
 	</div>
 </div>
 </body>
