--- a/admin/view/default/adminuser/useradd.html
+++ b/admin/view/default/adminuser/useradd.html
@@ -1,36 +1,24 @@
-<html>
-<head>
-<meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-<title>主机列表</title>
-<link rel='stylesheet' type='text/css' href='{{$STATIC}}/style/style.css'>
-<link rel='stylesheet' type='text/css' href='{{$pSTATIC}}/style/style2.css'>
-<script language="javascript" src="scripts/jquery.js"></script>
-<script language="javascript" src="scripts/common.js"></script>
-</head>
+{{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
  <div align="center">
-  <form  action="?c=adminuser&a=insert" method='post'>
-<div class="head_block tb_wid">&nbsp;增加管理员</div>
-<div class="block tb_wid">
-<table id="table_2" cellpadding="0" cellspacing="1">
-      <tr>
-        <td class="td_bgc right_2">用户：</td>
-        <td class="td_bgc right_2">
-          <input type='text' name='username' id='tb_wid3' value="" /></td>
-        </tr>
-      <tr>
-        <td class="td_bgc right_2">密码：</td>
-        <td class="td_bgc right_2"><input type='password' name='passwd' id='tb_wid3' value=""/></td>
-        </tr>
-      <tr>
-        <td class="td_bgc right_2">确认密码：</td>
-        <td class="td_bgc right_2"><input type='password' name='passwd2' id='tb_wid3' value=""/></td>
-        </tr>
-	    <tr>
-	    <td class="td_bgc td_hg" colspan="2" align="center">
-		<input type="submit" value="确定"></td>
-        </tr>
-    </table>
+	<form  action="?c=adminuser&a=insert" method='post'>
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：帐号管理 --> 增加管理员</div>
+		<table class="table_main mar_main" cellpadding="0" cellspacing="1">
+		  	<tr><td colspan="2" class="bg_main"><b>增加管理员</b></td></tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td class="wid_general">用户：</td><td><input type='text' name='username' id='tb_wid3' value="" /></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>密码：</td><td><input type='password' name='passwd' id='tb_wid3' value=""/></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>确认密码：</td><td><input type='password' name='passwd2' id='tb_wid3' value=""/></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>&nbsp;</td><td align="left"><input type="submit" value="确定"></td>
+			</tr>
+		</table>
 	</div>
 	</form>
   </div>
