--- a/admin/view/default/changePassword.html
+++ b/admin/view/default/changePassword.html
@@ -15,32 +15,27 @@ function checkPassword()
 }
 </script>
 <div align="center">
-<div class="topimg"></div>
     <form name='frm' action="?c=session&a=changePassword" method="post">
-<div class="head_block tb_wid">&nbsp;修改密码</div>
-<div class="block tb_wid">
-<table id="table_2" cellpadding="0" cellspacing="1" >
-      <tr>
-        <td class="td_bgc right_2">原密码：</td>
-        <td class="td_bgc right_2">
-          <input type='password' name='oldpasswd' id='tb_wid3'></td>
-        </tr>
-      <tr>
-        <td class="td_bgc right_2">新密码：</td>
-        <td class="td_bgc right_2"><input type='password' name='passwd' id='tb_wid3' ></td>
-        </tr>
-      <tr>
-        <td class="td_bgc right_2">确认新密码：</td>
-        <td class="td_bgc right_2"><input type='password' name='passwd2' id='tb_wid3'></td>
-        </tr>
-	    <tr>
-	    <td class="td_bgc td_hg" colspan="2" align="center">
-		<input type="submit" value="确定">
-		</td>
-        </tr>
-    </table>
-</div>
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：帐号管理 --> 修改密码</div>
+		<table class="table_main mar_main" cellpadding="0" cellspacing="1">
+			<tr>
+				<td colspan="2" class="bg_main"><b>修改密码</b></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td class="wid_general">原密码：</td><td><input type='password' name='oldpasswd' id='tb_wid3'></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>新密码：</td><td><input type='password' name='passwd' id='tb_wid3' ></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>确认新密码：</td><td><input type='password' name='passwd2' id='tb_wid3'></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>&nbsp;</td><td><input type="submit" value="确定"></td>
+			</tr>
+		</table>
+	</div>
 	</form>
-  </div>
 </body>
 {{include file='common/foot.html'}}
