--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -38,7 +38,7 @@ function SwitchMenu(obj,sty)
 </script>
 <div id="masterdiv">
 	<h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu"><ol id="p2">{{$lang.account_manage}}</ol></h1>
-		<ul class="submenu" id="sub2" >
+		<ul class="submenu left_linght" id="sub2" >
 			<li><a href="?c=index&a=main" target='main'>{{$lang.myinfo}}</a></li>	
 			<li><a href="?c=session&a=changePasswordForm" target='main'>{{$lang.change_passwd}}</a></li>
 			<li><a href="?c=adminuser&a=listUser" target='main'>管理员</a></li>	
@@ -46,18 +46,18 @@ function SwitchMenu(obj,sty)
 		</ul>
 		
 	<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu"><ol id="p4">主机管理</ol></h1>
-		<ul class="submenu" id="sub4" >
+		<ul class="submenu left_linght" id="sub4" >
 			<li><a href="?c=nodes&a=listNode" target='main'>主机列表</a></li>	
 			<li><a href="?c=nodes&a=addNode" target='main'>增加主机</a></li>
 		</ul>
 		
 	<h1 id="m5" onClick="SwitchMenu('sub5','m5')" class="menu"><ol id="p5">用户管理</ol></h1>
-		<ul class="submenu" id="sub5" >
+		<ul class="submenu left_linght" id="sub5" >
 			<li><a href="?c=user&a=listUser" target='main'>用户查询</a></li>
 			<li><a href="?c=user&a=pageUsers" target='main'>用户列表</a></li>
 		</ul>
 	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">虚拟主机/cdn</ol>	</h1>
-		<ul class="submenu" id="sub6" >
+		<ul class="submenu left_linght" id="sub6" >
 			<li><a href="?c=vhost&a=pageVhost" target='main'>用户列表</a></li>	
 			<li><a href="?c=vhost&a=pageVhostByExpire_time&day=1" target='main'>过期列表</a></li>	
 			<li><a href="?c=vhostproduct&a=showProduct" target='main'>产品列表</a></li>	
@@ -66,26 +66,26 @@ function SwitchMenu(obj,sty)
 		</ul>
  	
 	<h1 id="m11" onClick="SwitchMenu('sub11','m11')" class="menu"><ol id="p11">非自动化产品</ol>	</h1>
-		<ul class="submenu" id="sub11" >
+		<ul class="submenu left_linght" id="sub11" >
 			<li><a href="?c=mproduct&a=pageListMproduct" target='main'>产品列表</a></li>	
 			<li><a href="?c=mproductgroup&a=pageListMproductgroup" target='main'>业务列表</a></li>
 			<li><a href="?c=mproductorder&a=pageListMproductorder" target='main'>订单列表</a></li>
 		</ul>
 	
 	<h1 id="m8" onClick="SwitchMenu('sub8','m8')" class="menu"><ol id="p8">财务管理</ol>	</h1>
-		<ul class="submenu" id="sub8" >
+		<ul class="submenu left_linght" id="sub8" >
 			<li><a href='?c=money&a=pageMoneyin' target='main'>充值记录</a></li>
 			<li><a href='?c=money&a=pageMoneyout' target='main'>消费记录</a></li>	
 		</ul>
 			
 	<h1 id="m9" onClick="SwitchMenu('sub9','m9')" class="menu"><ol id="p9">信息管理</ol>	</h1>
-		<ul class="submenu" id="sub9" >
+		<ul class="submenu left_linght" id="sub9" >
 			<li><a href='?c=question&a=pageQuestion' target='main'>用户提问</a></li>
 			<li><a href='?c=news&a=pageNews' target='main'>公告管理</a></li>		
 		</ul>
 			
 	<h1 id="m10" onClick="SwitchMenu('sub10','m10')" class="menu"><ol id="p10">系统设置</ol>	</h1>
-		<ul class="submenu" id="sub10" >
+		<ul class="submenu left_linght" id="sub10" >
 			<li><a href='?c=setting&a=index&sub=alipay' target='main'>网上支付设置</a></li>
 			<!--  <li><a href='?c=front&a=pageListIndex' target='main'>前台设置列表</a></li>-->
 			<li><a href='?c=agent&a=listagent' target='main'>代理级别设置</a></li>
@@ -98,5 +98,75 @@ function SwitchMenu(obj,sty)
 <div><br></div>
 </td></tr>
 </table>
+    <script type="text/javascript">  
+    /* 
+     *  id：展开/收起内容区的id 
+     *  minH : 展开/收起的最小高度 
+     *  maxH : 展开/收起的最大高度 
+     *  expand : true - 从收起到展开、false - 从展开到收起 
+     *  rate : 缓动变化率 0-1 
+     *  speed : 速度（毫秒） 
+     */  
+    var Toggle = function(id, minH, maxH, expand, rate, speed){  
+        this.minH = minH;  
+        this.maxH = maxH;  
+        this.tempH = 0;  
+        this.rate = rate;  
+        this.speed = speed;  
+        this.moving = false;  
+        this.moveT = null;  
+        this.holder = document.getElementById(id);  
+        this.expand = expand;  
+    }  
+    Toggle.prototype = {  
+        start : function(){  
+            if(this.moving) return;  
+            this.moving = true;  
+            this.tempH = this.expand ? this.minH : this.maxH;  
+            var t = this;  
+            this.moveT = setInterval(function(){t.move()}, this.speed);  
+        },  
+        move : function(){  
+            if(this.expand){  
+                if(this.tempH >= this.maxH){  
+                    this.moving = false;  
+                    this.expand = false;  
+                    clearInterval(this.moveT);  
+                }else{  
+                    var h = Math.round((this.maxH - this.tempH) * this.rate);  
+                    if(h <= 1){  
+                        h = 1;  
+                    }  
+                    this.tempH += h;  
+                }  
+            }else{  
+                if(this.tempH <= this.minH){  
+                    this.moving = false;  
+                    this.expand = true;  
+                    clearInterval(this.moveT);  
+                }else{  
+                    var h = Math.round((this.tempH - this.minH) * this.rate);  
+                    if(h <= 1){  
+                        h = 1;  
+                    }  
+                    this.tempH -= h;  
+                }  
+            }  
+            this.holder.style.height = this.tempH + "px";  
+        }  
+    }  
+      
+    //版块一（默认已收起）  
+    var obj = new Toggle("holder",20,200,true, 0.2, 10);  
+    document.getElementById("title").onclick = function(){  
+        obj.start();  
+    }  
+      
+    //版块二（默认已展开）  
+    var obj2 = new Toggle("holder2",20,200,false, 0.2, 10);  
+    document.getElementById("title2").onclick = function(){  
+        obj2.start();  
+    }  
+    </script>  
 </body>
 {{include file='common/foot.html'}}
