--- a/admin/view/default/main.html
+++ b/admin/view/default/main.html
@@ -1,24 +1,23 @@
 {{include file='common/head.html'}}
 <body text='#000000' leftmargin='0' topmargin='0'>
 <div align="center">
-<div class="head_block tb_wid">&nbsp;我的信息</div>
-<div class="block tb_wid">
-<table id="table_2" border="0" cellpadding="0" cellspacing="1">
-	  <tr>
-        <td class="td_bgc right_2">用户名:</td>
-        <td class="td_bgc tb_wid2 right_2">{{$role.admin}}</td>
-	  </tr>
-	  <tr>
-        <td class="td_bgc right_2">最后登录时间:</td>
-        <td class="td_bgc right_2"> {{$smarty.session.admin_last_login}}</td>
-      </tr>
-	  <tr>
-        <td class="td_bgc right_2">最后登录IP:</td>
-        <td class="td_bgc right_2">{{$smarty.session.admin_last_ip}}</td>
-	  </tr>
-    </table>
-  </div>
-	  </div>
-	  </div></div>
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：帐号管理 --> 我的信息</div>
+		<table class="table_main mar_main" cellpadding="0" cellspacing="1">
+		  <tr class="main_bgcolor">
+			<td colspan="2" class="bg_main"><b>我的信息</b></td>
+		  </tr>
+		  <tr class="main_bgcolor">
+			<td class="wid_general">用户名:</td><td>{{$role.admin}}</td>
+		  </tr>
+		  <tr class="main_bgcolor">
+			<td>最后登录时间:</td><td class="td_bgc right_2">{{$smarty.session.admin_last_login}}</td>
+		  </tr>
+		  <tr class="main_bgcolor">
+			<td>最后登录IP:</td><td>{{$smarty.session.admin_last_ip}}</td>
+		  </tr>
+		</table>
+	</div>
+</div>
 {{include file='common/foot.html'}}
 
