--- a/admin/view/default/money/pagemoneyin.html
+++ b/admin/view/default/money/pagemoneyin.html
@@ -1,51 +1,54 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="container">
-	<div align="center">
-		<div class="mar_top tb_wid5" align="right">
-			{{if $page>1}}
-			<a href='?c=money&a=pageMoneyin&page=0'>首页</a> 
-			<a href='?c=money&a=pageMoneyin&page={{$page-1}}'>上一页</a> 
-			{{else}}
-			首页 上一页 
-			{{/if}}
-			{{if $page!=$total_page}} 
-			<a href='?c=money&a=pageMoneyin&page={{$page+1}}'>下一页</a>
-			<a href='?c=money&a=pageMoneyin&page={{$total_page}}'>尾页</a>
-			{{else}}下一页 尾页
-			{{/if}} 
-			{{$page}}/{{$total_page}}&nbsp;
-			共计{{$count}}记录
-		</div>
-		<div class="block tb_wid5">
-			<table id="table" border="0" cellpadding="0" cellspacing="1">
-				<tr id="ttitle">
-					<td class="right_2">操作</td>	
-					<td class="right_2">编号</td>
-					<td class="right_2">会员账号</td>
-					<td class="right_2">充值金额</td>
-					<td class="right_2">充值开始时间</td>
-					<td class="right_2">支付成功时间</td>	
-					<td class="right_2">状态</td>	
-					<td class="right_2">支付方式</td>	
-					</tr>
-					{{foreach from=$list item=row}}
-				<tr>
-					<td class="right_2">{{if $row.status==0}}
-						[<a href="javascript:if(confirm('确定编号{{$row.id}}，用户名{{$row.username}}的充值金额{{$row.money/100}}元')){location='?c=money&a=manPayReturn&id={{$row.id}}';}" title="确认">确认</a>]{{/if}}
-					</td>
-					<td class="right_2">{{$row.id}}</td>
-					<td class="right_2">{{$row.username}}</td>
-					<td class="right_2">{{$row.money/100}}元</td>
-					<td class="right_2">{{$row.start_time}}</td>
-					<td class="right_2">{{$row.end_time}}</td>
-					<td class="right_2">{{if $row.status==1}}成功{{else}} <font color=red>失败</font>{{/if}}</td>
-					<td class="right_2">{{if $row.gw==1}}支付宝{{else}}网银在线{{/if}}</td>
-					</tr>
-					{{/foreach}}
-		  </table>
-		</div>
-	
+<div align="center">
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：财务管理 --> 充值记录</div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+			<tr>
+				<td colspan="8" class="bg_main"><b>充值记录</b></td>
+			</tr>
+			<tr class="bg_yellow">
+				<td>操作</td>	
+				<td>编号</td>
+				<td>会员账号</td>
+				<td>充值金额</td>
+				<td>充值开始时间</td>
+				<td>支付成功时间</td>	
+				<td>状态</td>	
+				<td>支付方式</td>	
+				</tr>
+				{{foreach from=$list item=row}}
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>{{if $row.status==0}}
+					[<a href="javascript:if(confirm('确定编号{{$row.id}}，用户名{{$row.username}}的充值金额{{$row.money/100}}元')){location='?c=money&a=manPayReturn&id={{$row.id}}';}" title="确认">确认</a>]{{/if}}
+				</td>
+				<td>{{$row.id}}</td>
+				<td>{{$row.username}}</td>
+				<td>{{$row.money/100}}元</td>
+				<td>{{$row.start_time}}</td>
+				<td>{{$row.end_time}}</td>
+				<td>{{if $row.status==1}}成功{{else}} <font color=red>失败</font>{{/if}}</td>
+				<td>{{if $row.gw==1}}支付宝{{else}}网银在线{{/if}}</td>
+			</tr>
+			{{/foreach}}
+			<tr>
+				<td colspan="8" class="bg_yellow" align="right">
+					{{if $page>1}}
+					<a href='?c=money&a=pageMoneyin&page=0'>首页</a> 
+					<a href='?c=money&a=pageMoneyin&page={{$page-1}}'>上一页</a> 
+					{{else}}
+					首页 上一页 
+					{{/if}}
+					{{if $page!=$total_page}} 
+					<a href='?c=money&a=pageMoneyin&page={{$page+1}}'>下一页</a>
+					<a href='?c=money&a=pageMoneyin&page={{$total_page}}'>尾页</a>
+					{{else}}下一页 尾页
+					{{/if}} 
+					{{$page}}/{{$total_page}}&nbsp;
+					共计{{$count}}记录&nbsp;
+				</td>
+			</tr>
+	  </table>
 	</div>
 </div>
 </body>
