--- a/admin/view/default/money/pagemoneyout.html
+++ b/admin/view/default/money/pagemoneyout.html
@@ -1,43 +1,46 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="container">
-	<div align="center">
-		<div class="mar_top tb_wid5" align="right">
-			{{if $page>1}}
-			<a href='?c=money&a=pageMoneyout&page=0'>首页</a> 
-			<a href='?c=money&a=pageMoneyout&page={{$page-1}}'>上一页</a> 
-			{{else}}
-			首页 上一页 
-			{{/if}}
-			{{if $page!=$total_page}} 
-			<a href='?c=money&a=pageMoneyout&page={{$page+1}}'>下一页</a>
-			<a href='?c=money&a=pageMoneyout&page={{$total_page}}'>尾页</a>
-			{{else}}下一页 尾页
-			{{/if}} 
-			{{$page}}/{{$total_page}}&nbsp;
-			共计{{$count}}记录
-		</div>
-		<div class="block tb_wid5">
-			<table id="table" border="0" cellpadding="0" cellspacing="1">
-				<tr id="ttitle">
-					<td class="right_2">序号</td>
-					<td class="right_2">会员账号</td>
-					<td class="right_2">消费金额</td>
-					<td class="right_2">消费时间</td>
-					<td class="right_2">说明</td>	
-				</tr>
-					{{foreach from=$list item=row}}
-				<tr>
-					<td class="right_2">{{$row.id}}</td>
-					<td class="right_2">{{$row.username}}</td>
-					<td class="right_2">{{$row.money/100}}元</td>
-					<td class="right_2">{{$row.add_time}}</td>
-					<td class="right_2">{{$row.mem}}</td>
-				</tr>
-					{{/foreach}}
-		  </table>
-		</div>
-	
+<div align="center">
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：财务管理 --> 消费记录</div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+			<tr>
+				<td colspan="6" class="bg_main"><b>消费记录</b></td>
+			</tr>
+			<tr class="bg_yellow">
+				<td>序号</td>
+				<td>会员账号</td>
+				<td>消费金额</td>
+				<td>消费时间</td>
+				<td>说明</td>	
+			</tr>
+				{{foreach from=$list item=row}}
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>{{$row.id}}</td>
+				<td>{{$row.username}}</td>
+				<td>{{$row.money/100}}元</td>
+				<td>{{$row.add_time}}</td>
+				<td>{{$row.mem}}</td>
+			</tr>
+				{{/foreach}}
+			<tr>
+				<td colspan="6" class="bg_yellow" align="right">
+					{{if $page>1}}
+					<a href='?c=money&a=pageMoneyout&page=0'>首页</a> 
+					<a href='?c=money&a=pageMoneyout&page={{$page-1}}'>上一页</a> 
+					{{else}}
+					首页 上一页 
+					{{/if}}
+					{{if $page!=$total_page}} 
+					<a href='?c=money&a=pageMoneyout&page={{$page+1}}'>下一页</a>
+					<a href='?c=money&a=pageMoneyout&page={{$total_page}}'>尾页</a>
+					{{else}}下一页 尾页
+					{{/if}} 
+					{{$page}}/{{$total_page}}&nbsp;
+					共计{{$count}}记录
+				</td>
+			</tr>
+	  </table>
 	</div>
 </div>
 </body>
