--- a/admin/view/default/mproductgroup/pagelistmproductgroup.html
+++ b/admin/view/default/mproductgroup/pagelistmproductgroup.html
@@ -1,71 +1,47 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="container">
-	<div align="center">
-		<div class="mar_top tb_wid5" align="right">
-		<table width="100%" border="0" cellpadding="0" cellspacing="0">
-		  <tr>
-			<td class="right" align="left">
-				<a href="?c=mproductgroup&a=addMproductgroupFrom" target='main'><b>增加业务</b></a>
-			</td>
-			<td align="right">
-				{{if $page>1}}
-				<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&&page=0'>首页</a> 
-				<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$page-1}}'>上一页</a> 
-				{{else}}
-				首页 上一页 
-				{{/if}}
-				{{if $page!=$total_page}} 
-				<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$page+1}}'>下一页</a>
-				<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$total_page}}'>尾页</a>
-				{{else}}下一页 尾页
-				{{/if}} 
-				{{$page}}/{{$total_page}}&nbsp;
-				共计{{$count}}记录
-			</td>
-		  </tr>
+<div align="center">
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：非自动化产品 --> 业务列表</div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+			<tr>
+				<td colspan="4" class="bg_main"><a href="?c=mproductgroup&a=addMproductgroupFrom" target='main'><b>[增加业务]</b></a></td>
+			</tr>
+			<tr class="bg_yellow">
+				<td>操作</td>	
+				<td><a href='?c=mproductgroup&a=pageListMproductgroup&order=id'>业务ID</a></td>
+				<td><a href='?c=mproductgroup&a=pageListMproductgroup&order=name'>业务名称</a></td>
+				<td>业务详情</td>
+			</tr>
+			{{foreach from=$list item=row}}
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>
+					[<a href="javascript:if(confirm('确定?')){location='?c=mproductgroup&a=delMproductgroup&id={{$row.id}}';}" >删除</a>]
+					[<a href="?c=mproductgroup&a=addMproductgroupFrom&id={{$row.id}}" >更改</a>]
+				</td>
+				<td>{{$row.id}}</td>
+				<td>{{$row.name}}</td>
+				<td>{{$row.describe}}</td>
+			</tr>
+			{{/foreach}}
+			<tr>
+				<td colspan="4" class="bg_yellow" align="right">
+					{{if $page>1}}
+					<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&&page=0'>首页</a> 
+					<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$page-1}}'>上一页</a> 
+					{{else}}
+					首页 上一页 
+					{{/if}}
+					{{if $page!=$total_page}} 
+					<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$page+1}}'>下一页</a>
+					<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$total_page}}'>尾页</a>
+					{{else}}下一页 尾页
+					{{/if}} 
+					{{$page}}/{{$total_page}}&nbsp;
+					共计{{$count}}记录&nbsp;
+				</td>
+			</tr>
 		</table>
-		</div>
-		<div class="block tb_wid5">
-				<table id="table" border="0" cellpadding="0" cellspacing="1">
-			
-					<tr id="ttitle">
-					<td class="right_2">操作</td>	
-					<td class="right_2"><a href='?c=mproductgroup&a=pageListMproductgroup&order=id'>业务ID</a></td>
-					<td class="right_2"><a href='?c=mproductgroup&a=pageListMproductgroup&order=name'>业务名称</a></td>
-					<td class="right_2"><span class="color_white">业务详情</span></td>
-					</tr>
-					{{foreach from=$list item=row}}
-					
-					<tr>
-					<td class="right_2">
-						[<a href="javascript:if(confirm('确定?')){location='?c=mproductgroup&a=delMproductgroup&id={{$row.id}}';}" >删除</a>]
-						[<a href="?c=mproductgroup&a=addMproductgroupFrom&id={{$row.id}}" >更改</a>]
-					</td>
-					<td class="right_2">{{$row.id}}</td>
-					<td class="right_2">{{$row.name}}</td>
-					<td class="right_2">{{$row.describe}}</td>
-					</tr>
-					{{/foreach}}
-		  		</table>
-		</div>
-		
-		<div class="mar_top tb_wid5" align="right">
-			{{if $page>1}}
-			<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&&page=0'>首页</a> 
-			<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$page-1}}'>上一页</a> 
-			{{else}}
-			首页 上一页 
-			{{/if}}
-			{{if $page!=$total_page}} 
-			<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$page+1}}'>下一页</a>
-			<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$total_page}}'>尾页</a>
-			{{else}}下一页 尾页
-			{{/if}} 
-			{{$page}}/{{$total_page}}&nbsp;
-			共计{{$count}}记录
-		</div>
-		
 	</div>
 </div>
 </body>
