--- a/admin/view/default/news/list.html
+++ b/admin/view/default/news/list.html
@@ -1,25 +1,27 @@
 {{include file='common/head.html'}}
 <div align="center">
- <form name='nodeform' action="?c=news&a=updateNews&id={{$new.id}}" method="post">
-<div class="head_block tb_wid">&nbsp;更新公告</div>
-<div class="block tb_wid">
- <table id="table_2" cellpadding="0" cellspacing="1">
- 	  <tr>
-        <td class="td_bgc right_2">标题:</td> 
-        <td class="td_bgc right_2">
-		<input name='title' type="text" value="{{$new.title}}" size="45" />
-        </td>
-       </tr>
-       <tr>
-        <td class="td_bgc right_2" valign="top">公告内容:</td>
-        <td class="td_bgc right_2" >
-        <textarea name='body'  rows='20' cols='60'>{{$new.body}}</textarea></td>
-     <tr>
-	    <td class="td_bgc td_hg" colspan="2" align="center">
-		<input type="submit" value="提交"></td>
-        </tr>
-   
-    </table>
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：信息管理 --> 公告管理 --> 更新公告 </div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+ 			<form name='nodeform' action="?c=news&a=updateNews&id={{$new.id}}" method="post">
+			<tr>
+				<td colspan="2" class="bg_main hg_main"><b>更新公告</b></td>
+			</tr>
+		  	<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td class="wid_general">标题:</td> 
+				<td>
+					<input name='title' type="text" value="{{$new.title}}" size="45" />
+				</td>
+		   </tr>
+		   <tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td valign="top">公告内容:</td>
+				<td>
+					<textarea name='body'  rows='20' cols='60'>{{$new.body}}</textarea>
+				</td>
+		 	<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>&nbsp;</td><td><input type="submit" value="提交"></td>
+		  	</tr>
+			</form>
+    	</table>
 	</div>
-	</form>
 </div>
