--- a/admin/view/default/news/pagelist.html
+++ b/admin/view/default/news/pagelist.html
@@ -1,50 +1,45 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="container">
-	<div align="center">
-		<div class="mar_top tb_wid5" align="right">
-		<table cellpadding="0" cellspacing="0" id="table_2">
-		  <tr><td align="left">
-				[<a href="?c=news&a=addFrom" target="{{$target}}" ><span class="font_1">增加公告</span></a>]
-			</td>
-		  	<td align="right">
-				{{if $page>1}}
-				<a href='?c=news&a=pagenews&page=0'>首页</a> 
-				<a href='?c=news&a=pagenews&page={{$page-1}}'>上一页</a> 
-				{{else}}
-				首页 上一页 
-				{{/if}}
-				{{if $page!=$total_page}} 
-				<a href='?c=news&a=pagenews&page={{$page+1}}'>下一页</a>
-				<a href='?c=news&a=pagenews&page={{$total_page}}'>尾页</a>
-				{{else}}下一页 尾页
-				{{/if}} 
-				{{$page}}/{{$total_page}}&nbsp;
-				共计{{$count}}记录
-		  </td></tr>
-		</table>
-		</div>
-		<div class="block tb_wid5">
-			<table id="table" border="0" cellpadding="0" cellspacing="1">
-				<tr id="ttitle">
-					<td class="right_2">操作</td>		
-					<td class="right_2">序号</td>
-					<td class="right_2">标题</td>
-					<td class="right_2">更新时间</td>
-					</tr>
-					{{foreach from=$list item=row}}
-				<tr>
-					<td class="right_2">[<a href='?c=news&a=getNews&id={{$row.id}}'>更新</a>][<a href='javascript:if(confirm("确定要删除吗?"))
-					{ window.location="?c=news&a=delNews&id={{$row.id}}";}'>删除</a>]</td>
-					<td class="right_2">{{$row.id}}</td>
-					<td class="right_2"><a href='/user/frame.php?c=public&a=readNews&id={{$row.id}}'>{{$row.title}}</a></td>
-					<td class="right_2">{{$row.add_time}}</td>
-					
-					</tr>
-					{{/foreach}}
-		  </table>
-		</div>
-	
+<div align="center">
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：信息管理 --> 公告管理 </div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+			<tr>
+				<td colspan="4" class="bg_main hg_main"><b><a href="?c=news&a=addFrom" target="{{$target}}" >[增加公告]</a></b></td>
+			</tr>
+			<tr class="bg_yellow">
+				<td>操作</td>		
+				<td>序号</td>
+				<td>标题</td>
+				<td>更新时间</td>
+			</tr>
+				{{foreach from=$list item=row}}
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>[<a href='?c=news&a=getNews&id={{$row.id}}'>更新</a>][<a href='javascript:if(confirm("确定要删除吗?"))
+				{ window.location="?c=news&a=delNews&id={{$row.id}}";}'>删除</a>]</td>
+				<td>{{$row.id}}</td>
+				<td><a href='/user/frame.php?c=public&a=readNews&id={{$row.id}}'>{{$row.title}}</a></td>
+				<td>{{$row.add_time}}</td>
+			</tr>
+				{{/foreach}}
+			<tr>
+				<td colspan="4" class="bg_yellow" align="right">
+					{{if $page>1}}
+					<a href='?c=news&a=pagenews&page=0'>首页</a> 
+					<a href='?c=news&a=pagenews&page={{$page-1}}'>上一页</a> 
+					{{else}}
+					首页 上一页 
+					{{/if}}
+					{{if $page!=$total_page}} 
+					<a href='?c=news&a=pagenews&page={{$page+1}}'>下一页</a>
+					<a href='?c=news&a=pagenews&page={{$total_page}}'>尾页</a>
+					{{else}}下一页 尾页
+					{{/if}} 
+					{{$page}}/{{$total_page}}&nbsp;
+					共计{{$count}}记录&nbsp;
+				</td>
+			</tr>
+	  </table>
 	</div>
 </div>
 </body>
