--- a/admin/view/default/nodes/listnode.html
+++ b/admin/view/default/nodes/listnode.html
@@ -1,8 +1,7 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <!-- ajax 查询节点状态 -->
-<script language='javascript' src='{{$PSTATIC}}/style/common.js'>
-</script>
+<script language='javascript' src='{{$PSTATIC}}/style/common.js'></script>
 <script language='javascript'>
 var xmlhttp2=new Array();
 function checkNodeResult(node)
@@ -58,47 +57,48 @@ function checkAllNode()
 	  {{/foreach}}
 }
 </script>
-<div id="container">
-{{if $msg}}
-<div align="center"><br />
-<div class="block tb_wid mar_top" align="center"><font color='red'>{{$msg}}</font></div>
-</div>
-{{/if}}
-<div class="padd mar_top">
-<div class="topimg pal1">共计 {{$sum}} 条记录</div>
-</div>
-  <div id="main" class="wid">
-  <table width="100%" align="center" cellspacing="3">
-<tr><td>[<a href='?c=nodes&a=flush'>更新配置文件</a>][<a href='javascript:checkAllNode()'>查询所有主机状态</a>][<a href="?c=nodes&a=addNode" target='main'>增加主机</a>]</td></tr>
-    </table>
-    <table width="90%" align="center" cellpadding=0 cellspacing=1 id="table">
-      <tr id="ttitle">
-        <td bgcolor='#efefef' class='color01 right'>操作</td>       
-        <td bgcolor='#efefef' class='color01 right'>名称</td>
-        <td bgcolor='#efefef' class='color01 right'>备注</td>
-        <td bgcolor='#efefef' class='color01 right'>主机状态</td>
-		<td bgcolor='#efefef' class='color01 right'>主机</td>
-		<td  bgcolor='#efefef' class='color01 right'>管理端口</td>
-      </tr>
-	  {{foreach from=$list item=row}}
-      <tr>
-        <td class="right">
-          [<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=nodes&a=del&name={{$row.name}}';}" title="删除主机">删除</a>]        
-          [<a href="?c=nodes&a=editForm&name={{$row.name}}" title="更改信息">修改</a>]
-         </td>
-         
-         <td class="right"><a href='http://{{$row.host}}:{{$row.port}}/admin/' target=_blank'>{{$row.name}}</a>       
-        </td>
-        <td class="right">{{$row.nickname}}</td>
-        <td class="right"> <div id='{{$row.name}}'><a href="javascript:checkNode('{{$row.name}}')">查询</a></div></td>
- 		<td class="right">{{$row.host}}</td>
-		<td class="right">{{$row.port}}</td>
-      </tr>
-	  {{/foreach}}
-    </table>
-    <div align="left">
+
+<div align="center">
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：主机管理 --> 主机列表</div>
+		{{if $msg}}
+			<div class="block mar_top" align="center"><font color='red'>{{$msg}}</font></div>
+		{{/if}}
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		  <tr>
+			<td colspan="6" class="bg_main">
+				[<a href='?c=nodes&a=flush'><b>更新配置文件</b></a>]
+				[<a href='javascript:checkAllNode()'><b>查询所有主机状态</b></a>]
+				[<a href="?c=nodes&a=addNode" target='main'><b>增加主机</b></a>]
+			</td>
+		  </tr>
+		  <tr class="bg_yellow">
+			<td>操作</td>
+			<td>名称</td>
+			<td>备注</td>
+			<td>主机状态</td>
+			<td>主机</td>
+			<td>管理端口</td>
+		  </tr>
+		  {{foreach from=$list item=row}}
+		  <tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<td>
+			  [<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=nodes&a=del&name={{$row.name}}';}" title="删除主机">删除</a>]        
+			  [<a href="?c=nodes&a=editForm&name={{$row.name}}" title="更改信息">修改</a>]
+			 </td>
+			 <td><a href='http://{{$row.host}}:{{$row.port}}/admin/' target="_blank">{{$row.name}}</a>       
+			</td>
+			<td>{{$row.nickname}}</td>
+			<td> <div id='{{$row.name}}'><a href="javascript:checkNode('{{$row.name}}')">查询</a></div></td>
+			<td>{{$row.host}}</td>
+			<td>{{$row.port}}</td>
+		  </tr>
+		  {{/foreach}}
+		  <tr>
+			<td colspan="6" class="bg_yellow" align="right">共计 {{$sum}} 条记录&nbsp;</td>
+		  </tr>
+		</table>
 	</div>
-  </div>
 </div>
 </body>
 {{include file='common/foot.html'}}
