--- a/admin/view/default/question/list.html
+++ b/admin/view/default/question/list.html
@@ -1,27 +1,29 @@
 {{include file='common/head.html'}}
 <div align="center">
- <form name='nodeform' action="?c=question&a=addReply&id={{$log.id}}" method="post">
-<div class="head_block tb_wid">&nbsp;提问用户:{{$log.username}}</div>
-<div class="block tb_wid">
- <table id="table_2" cellpadding="0" cellspacing="1">
- 	  <tr>
-        <td class="td_bgc right_2">提问标题:</td> 
-        <td class="td_bgc right_2">{{$log.title}}</td>
-       	</tr>
-       <tr>
-        <td class="td_bgc right_2">提问内容:</td>
-        <td class="td_bgc right_2" >{{$log.body}}</td>
-     	</tr>  <tr>
-        <td class="td_bgc right_2">管理员回复:</td>
-        <td class="td_bgc right_2" >
-        <textarea name='reply'  rows='6' cols='35'>{{$log.reply}}</textarea></td>
-     	</tr>
-     <tr>
-	    <td class="td_bgc td_hg" colspan="2" align="center">
-		<input type="submit" value="提交"></td>
-        </tr>
-   
-    </table>
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：信息管理 --> 用户提问 --> 提问用户:{{$log.username}} </div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		 <form name='nodeform' action="?c=question&a=addReply&id={{$log.id}}" method="post">
+			<tr>
+				<td colspan="2" class="bg_main"><b>提问用户:{{$log.username}}</b></td>
+			</tr>
+		  	<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td class="wid_general">提问用户:{{$log.username}}</td> 
+				<td>{{$log.title}}</td>
+			</tr>
+		   <tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>提问内容:</td>
+				<td>{{$log.body}}</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>管理员回复:</td>
+				<td>
+				<textarea name='reply'  rows='6' cols='35'>{{$log.reply}}</textarea></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>&nbsp;</td><td colspan="2"><input type="submit" value="提交"></td>
+			</tr>
+			</form>
+    	</table>
 	</div>
-	</form>
 </div>
