--- a/admin/view/default/setting/show.html
+++ b/admin/view/default/setting/show.html
@@ -1,21 +1,21 @@
 {{include file='common/head.html'}}
-{{if $msg}}
 <div align="center">
-	<div class="block tb_wid2 mar_top" align="center"> 
-		<font color='red'>{{$msg}}</font>
-	</div>
-</div>
-{{/if}}
-<div><br /></div>
-<div align="center">
-	<div class="block tb_wid2">
-		<table id="table_2" cellpadding="0" cellspacing="1">
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：系统设置 --> 网上支付设置 </div>
+		{{if $msg}}
+		<div class="block mar_main" align="center"> 
+			<font color='red'>{{$msg}}</font>
+		</div>
+		{{/if}}
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+			<tr>
+				<td colspan="2" class="bg_main hg_main"><b>网上支付设置</b></td>
+			</tr>
 			<form action='?c=setting&a=set&sub={{$sub}}' method='post'>
 			{{foreach item=e from=$env}}				
-
-			<tr>	
-				<td class="td_bgc right_2">{{$lang[$e.name]}}</td>
-				<td class="td_bgc right_2">
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">	
+				<td class="wid_general">{{$lang[$e.name]}}</td>
+				<td>
 					<input type='hidden' name='name[]' value='{{$e.name}}'/>
 					{{if $e.value.0=='TEXT'}}	
 					<input type='text' name='{{$e.name}}' {{if $e.value.2}}size='{{$e.value.2}}'{{/if}} value='{{if !$e.password}}{{$val[$e.name].value}}{{/if}}'>		
@@ -30,10 +30,8 @@
 				</td>
 			</tr>
 			{{/foreach}}
-			<tr>
-				<td colspan="2" class="td_bgc td_hg" align="center">
-					<input type='submit' value='设置'>			
-				</td>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>&nbsp;</td><td><input type='submit' value='设置'></td>
 			</tr>
 			</form>	
 		</table>
