--- a/admin/view/default/style/style.css
+++ b/admin/view/default/style/style.css
@@ -327,4 +327,79 @@ padding:5px;
 .color01 a:hover {color: red;text-decoration: underline;
 }
 
+/*新版css*/
+.table_main {
+background-color:#D5D4D4;
+width:70%;
+line-height:30px;
+}
+.table_main2 {
+background-color:#D5D4D4;
+width:100%;
+border:0px;
+line-height:30px;
+}
+td{
+padding-left:5px;
+}
+.main_bgcolor{
+background-color:#f5f5f5;
+}
+.bg_main{
+/*background-color:#EAEBEC; */
+background-image:url(table_box.gif);
+}
+.bg_yellow{
+background-color:#FFFEE9;
+}
+.wid_main{
+width:97%;
+}
+.wid_general{
+width:20%;
+}
+.mar_main{
+margin-top:10px;
+}
+.block_top {
+/*
+BORDER-RIGHT: #9DAFBB 1px solid;
+BORDER-TOP: #9DAFBB 1px solid;
+background-color:#A5D9EF;
+BORDER-LEFT: #9DAFBB 1px solid;
+BORDER-BOTTOM: #9DAFBB 1px solid;	
+*/
+background-image:url(main_bg.gif);
+height:33px;
+padding-left:10px;
+line-height:33px;  
+overflow:hidden; 
+}
+.search {
+	border: 1px solid #9BCEF0;
+	border-bottom-width:1px;
+	background-color:#D6EAF8;		
+	color:#FFFFFF;
+	padding-top:6px;
+	padding-bottom:6px;
+	text-align:left;
+	height:45px;	
+}
+.page{
+height:30px;
+line-height:30px;
+overflow:hidden; 
+padding-left:5px;
+}
+.hg_main{
+height:30px;
+}
+.wid_tpl{
+width:100px;
+}
+
+
+
+
+
 
