--- a/admin/view/default/user/useredit.html
+++ b/admin/view/default/user/useredit.html
@@ -1,35 +1,35 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="container">
-<div class="topimg">当前位置：用户管理-> 用户列表-> 修改用户资料</div>
-  <div id="main" class="wid">
-  <form  action="?c=user&a=edit&username={{$user.username}}" method='post'>
-<div class="head_block tb_wid">&nbsp;修改用户资料</div>
-<div class="block tb_wid">
-<table id="table_2" cellpadding="0" cellspacing="1">
-      <tr>
-        <td class="td_bgc right_2">用户名：</td>
-        <td class="td_bgc">{{$user.username}}</td>
-        </tr>
-      <tr>
-        <td class="td_bgc right_2">姓名：</td>
-        <td class="td_bgc"><input name='name' value="{{$user.name}}"/></td>
-        </tr>
-      <tr>
-        <td class="td_bgc right_2">身份证:</td>
-        <td class="td_bgc"><input name='id'  value="{{$user.id}}"/></td>
-        </tr>
-      <tr>
-        <td class="td_bgc right_2">电子邮件:</td>
-        <td class="td_bgc"><input name='email' value="{{$user.email}}"/></td>
-       </tr>
-	   <tr>
-        <td class="td_bgc td_hg" colspan="2" align="center"><input type="submit" value="修改"></td>
-        </tr>
-    </table>
-	</div>
-	</form>
-  </div>
+<div align="center">
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：用户管理 --> 用户查询 --> 修改用户资料</div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		<form  action="?c=user&a=edit&username={{$user.username}}" method='post'>
+			<tr>
+				<td colspan="3" class="bg_main"><b>修改用户资料</b></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td class="wid_general">用户名：</td>
+				<td>{{$user.username}}</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>姓名：</td>
+				<td><input name='name' value="{{$user.name}}"/></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>身份证:</td>
+				<td class="td_bgc"><input name='id'  value="{{$user.id}}"/></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>电子邮件:</td>
+				<td><input name='email' value="{{$user.email}}"/></td>
+			 </tr>
+			 <tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>&nbsp;</td><td ><input type="submit" value="修改"></td>
+			</tr>
+			</form>
+		</table>
+	  </div>
 </div>
 </body>
 {{include file='common/foot.html'}}
