--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -1,5 +1,12 @@
 {{include file='common/head.html'}}
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
+<style>
+.menu dl dd ul li a:hover{
+	background:#FFF url(../images/ico_3.gif) no-repeat 13px 10px;
+	font-weight:bold;
+	color: #FF6600;
+}
+</style>
 <script language='javascript' src='{{$PSTATIC}}/style/common.js'></script>
 <script language='javascript'>
 function list_subtemplete_result() { 
@@ -83,177 +90,175 @@ function changeNode()
 }
 </script>
 <div align="center">
-<form name='nodeform'
-	action="?c=vhostproduct&a={{$action}}&id={{$vhostproduct.id}}"
-	method="post">
-<div class="head_block tb_wid2">&nbsp;{{if $action=='editProduct'}}修改产品{{else}}增加产品{{/if}}</div>
-<div class="block tb_wid2">
-<table id="table_2" cellpadding="0" cellspacing="1">
-	<tr>
-		<td class="td_bgc right_2">主机</td>
-		<td class="td_bgc right_2"><select name='node' onChange='changeNode()'>
-			{{foreach from=$nodes item=node}}
-			<option value='{{$node.name}}'
-				{{if $node.name==$vhostproduct.node}}selected{{/if}}>{{$node.name}}</option>
-			{{/foreach}}
-			</select></td>
-		</tr>
-	<tr>
-		<td class="td_bgc right_2">产品名称：</td>
-		<td class="td_bgc right_2 tb_wid2"><input name='name' type='text' id='tb_wid3'
-			value="{{$vhostproduct.name}}" size="16"></td>
-	</tr>
-	<tr>
-		<td class="td_bgc right_2">显示顺序：</td>
-		<td class="td_bgc right_2 tb_wid2"><input name='view' type='text' id='tb_wid3'
-			value="{{$vhostproduct.view}}" size="16"></td>
-	</tr>
-	<tr>
-		<td class="td_bgc right_2">产品组：</td>
-		<td class="td_bgc right_2 tb_wid2"><input name='upid' type='text'
-			value="{{intval($vhostproduct.upid)}}" size="3">(可升级到相同产品组的其它产品，设置为0不可升级)</td>
-	</tr>
-	<tr>
-		<td class="td_bgc right_2">产品类型：</td>
-		<td class="td_bgc right_2 tb_wid2">
-		<script language='javascript'>
-			function change_cdn(val)
-			{
-				if(val==0){
-					$('cdnpanel').style.display='';
-				} else {
-					$('cdnpanel').style.display='none';
-				}
-			}
-			
-		</script>
-		<input name='cdn' type='radio'	value="0" {{if !$vhostproduct || $vhostproduct.cdn==0}} checked {{/if}} onClick="change_cdn(0)">虚拟主机
-		<input name='cdn' type='radio'	value="1" {{if $vhostproduct.cdn==1}} checked {{/if}} onClick="change_cdn(1)">cdn(收费版才有此功能)
-	</td>
-	</tr>
-	<tr><td colspan='2'>
-	<div id='cdnpanel' style='display:{{if $vhostproduct.cdn==1}}none{{/if}}'>
-	<table width=100% border=0>	
-	<tr>
-		<td class="td_bgc right_2">空间大小(M)：</td>
-		<td class="td_bgc right_2"><input name="web_quota" type="text"
-			id='tb_wid3' value="{{$vhostproduct.web_quota}}" size="16"></td>
-	</tr>
-	<tr>
-		<td class="td_bgc right_2">数据库大小(M)：</td>
-		<td class="td_bgc right_2"><input name="db_quota" type="text"
-			id='tb_wid3' value="{{$vhostproduct.db_quota}}"></td>
-	</tr>
-		<tr>
-		<td class="td_bgc right_2">绑定子目录</td>
-		<td class="td_bgc right_2"><input type='checkbox' name='subdir_flag' value='1' {{if $vhostproduct.subdir_flag}}checked{{/if}}>允许绑定子目录
-		</td>
-	</tr>
-	<tr>
-		<td class="td_bgc right_2">默认绑定子目录:</td>
-		<td class="td_bgc right_2"><input name="subdir" type="text" id='tb_wid3'
-			value="{{$vhostproduct.subdir}}" size="16"></td>
-	</tr>
-	<tr>
-		<td class="td_bgc right_2">模板</td>
-		<td class="td_bgc right_2">
-		<table><tr><td>
-		<div id='templete'><input name="templete" type="text"
-			value="{{$vhostproduct.templete}}"></div>
-			</td><td>
-		<div id='subtemplete'></div>
-		</td></tr></table>
-		</td>
-	</tr>
-	<tr>
-		<td class="td_bgc right_2">多引擎切换:</td>
-		<td class="td_bgc right_2">
-			<input type='radio' name="cs" value="0" {{if $vhostproduct.cs==0}}checked{{/if}} size="16">不能切换
-			<input type='radio' name="cs" value="1" {{if $vhostproduct.cs==1}}checked{{/if}} size="16">随时切换
-			<input type='radio' name="cs" value="2" {{if !$vhostproduct || $vhostproduct.cs==2}}checked{{/if}} size="16">购买时切换
-		</td>
-	</tr>
-	</table>
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：虚拟主机/cdn --> {{if $action=='editProduct'}}修改产品{{else}}增加产品{{/if}}</div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		<form name='nodeform' action="?c=vhostproduct&a={{$action}}&id={{$vhostproduct.id}}" method="post">
+			<tr>
+				<td colspan="2" class="bg_main hg_main"><b>{{if $action=='editProduct'}}修改产品{{else}}增加产品{{/if}}</b></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td class="wid_general">主机</td>
+				<td><select name='node' onChange='changeNode()'>
+					{{foreach from=$nodes item=node}}
+					<option value='{{$node.name}}'
+						{{if $node.name==$vhostproduct.node}}selected{{/if}}>{{$node.name}}</option>
+					{{/foreach}}
+					</select>
+				</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>产品名称：</td>
+				<td><input name='name' type='text' id='tb_wid3'
+					value="{{$vhostproduct.name}}" size="16">
+				</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>显示顺序：</td>
+				<td><input name='view' type='text' id='tb_wid3'
+					value="{{$vhostproduct.view}}" size="16">
+				</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>产品组：</td>
+				<td><input name='upid' type='text'
+					value="{{intval($vhostproduct.upid)}}" size="3">(可升级到相同产品组的其它产品，设置为0不可升级)
+				</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>产品类型：</td>
+				<td>
+					<script language='javascript'>
+						function change_cdn(val)
+						{
+							if(val==0){
+								$('cdnpanel').style.display='';
+							} else {
+								$('cdnpanel').style.display='none';
+							}
+						}
+						
+					</script>
+					<input name='cdn' type='radio'	value="0" {{if !$vhostproduct || $vhostproduct.cdn==0}} checked {{/if}} onClick="change_cdn(0)">虚拟主机
+					<input name='cdn' type='radio'	value="1" {{if $vhostproduct.cdn==1}} checked {{/if}} onClick="change_cdn(1)">cdn(收费版才有此功能)
+				</td>
+			</tr>
+			<tr>
+				<td colspan='2' style="padding-left:0px;">
+					<div id='cdnpanel' style='display:{{if $vhostproduct.cdn==1}}none{{/if}}'>
+						<table class="table_main2" cellpadding="0" cellspacing="1">
+							<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+								<td class="wid_general">空间大小(M)：</td>
+								<td><input name="web_quota" type="text"
+									id='tb_wid3' value="{{$vhostproduct.web_quota}}" size="16"></td>
+							</tr>
+							<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+								<td>数据库大小(M)：</td>
+								<td><input name="db_quota" type="text"
+									id='tb_wid3' value="{{$vhostproduct.db_quota}}"></td>
+							</tr>
+							<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+								<td>绑定子目录</td>
+								<td>
+									<input type='checkbox' name='subdir_flag' value='1' {{if $vhostproduct.subdir_flag}}checked{{/if}}>允许绑定子目录
+								</td>
+							</tr>
+							<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+								<td>默认绑定子目录:</td>
+								<td><input name="subdir" type="text" id='tb_wid3'
+									value="{{$vhostproduct.subdir}}" size="16"></td>
+							</tr>
+							<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+								<td>模板</td>
+								<td>
+									<div id='templete'><input name="templete" type="text" value="{{$vhostproduct.templete}}"></div>
+									<div id='subtemplete'></div>
+								</td>
+							</tr>
+							<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+								<td>多引擎切换:</td>
+								<td>
+									<input type='radio' name="cs" value="0" {{if $vhostproduct.cs==0}}checked{{/if}} size="16">不能切换
+									<input type='radio' name="cs" value="1" {{if $vhostproduct.cs==1}}checked{{/if}} size="16">随时切换
+									<input type='radio' name="cs" value="2" {{if !$vhostproduct || $vhostproduct.cs==2}}checked{{/if}} size="16">购买时切换
+								</td>
+							</tr>
+					  </table>
+					</div>
+				</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>价格(元/年)</td>
+				<td>
+				<input name="price" type="text" id='tb_wid3' value="{{$vhostproduct.price/100}}">
+				<input type="checkbox" name="show_price" value="1" {{if $vhostproduct.show_price!=0}}checked{{/if}}>前台按月显示
+				</td>
+			</tr>
+			{{if count($agent_ids)>0}}
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>代理价格</td>
+				<td>
+					{{for $i=0;$i< count($agent_ids);$i++}}
+					{{$agent_ids[$i].name}}:
+					<input name="agentprice_{{$agent_ids[$i].id}}" type="text" id='tb_wid3' value="{{$agent_ids[$i].price/100}}" style="width:45px" />
+					{{/for}}
+				</td>
+			</tr>
+			{{/if}}
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>域名绑定个数(-1表示无限)</td>
+				<td>
+					<input name="domain" type="text" id='tb_wid3'
+					value="{{if $vhostproduct}}{{$vhostproduct.domain}}{{else}}-1{{/if}}">
+				</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>最大连接数(0无限)</td>
+				<td>
+					<input name="max_connect" type="text"
+					size='5' value="{{if $vhostproduct}}{{$vhostproduct.max_connect}}{{else}}0{{/if}}">
+				</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>带宽限制(0无限)</td>
+				<td>
+					<input name="speed_limit" type="text"
+					size='5' value="{{if $vhostproduct}}{{$vhostproduct.speed_limit/1024}}{{else}}0{{/if}}">&nbspK/每秒
+				</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>管理变量:</td>
+				<td>
+					<input name="envs" type="text" id='tb_wid3'
+					value="{{$vhostproduct.envs}}" size="40">
+				</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>其它选项</td>
+				<td>
+					<input type='checkbox' name='htaccess' value='1' {{if $vhostproduct.htaccess || !$vhostproduct}}checked{{/if}}>.htaccess支持
+					<input type='checkbox' name='ftp' value='1' {{if $vhostproduct.ftp || !$vhostproduct}}checked{{/if}}>开启ftp
+					<input type='checkbox' name='log_file' value='1' {{if $vhostproduct.log_file || !$vhostproduct}}checked{{/if}}>日志独立
+					<input type='checkbox' name='access' value='1' {{if $vhostproduct.access || !$vhostproduct}}checked{{/if}}>自定义控制
+				</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>产品说明(支持html):</td>
+				<td><textarea name='describe' rows='6' cols='40'>{{$vhostproduct.describe}}</textarea></td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>状态</td>
+				<td>
+					<input type="checkbox" name="pause_flag" value="1" {{if $vhostproduct.pause_flag!=0}}checked{{/if}}>暂停销售
+					<input type="checkbox" name="month_flag" value="1" {{if $vhostproduct.month_flag!=0}}checked{{/if}}>月付
+				</td>
+			</tr>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>&nbsp;</td><td><input type="submit" value="确认提交"></td>
+			</tr>
+			</form>
+		</table>
 	</div>
-	</td></tr>
-	<tr>
-		<td class="td_bgc right_2">价格(元/年)</td>
-		<td class="td_bgc right_2">
-		<input name="price" type="text" id='tb_wid3' value="{{$vhostproduct.price/100}}">
-		<input type="checkbox" name="show_price" value="1" {{if $vhostproduct.show_price!=0}}checked{{/if}}>前台按月显示
-		</td>
-	</tr>
-	
-	{{if count($agent_ids)>0}}
-	<tr>
-		<td class="td_bgc right_2">代理价格</td>
-		<td class="td_bgc right_2">
-
-		{{for $i=0;$i< count($agent_ids);$i++}}
-		
-		{{$agent_ids[$i].name}}:
-		<input name="agentprice_{{$agent_ids[$i].id}}" type="text" id='tb_wid3' value="{{$agent_ids[$i].price/100}}" style="width:45px" />
-		
-		{{/for}}
-		</td>
-	</tr>
-	{{/if}}
-	
-	
-	<tr>
-		<td class="td_bgc right_2">域名绑定个数(-1表示无限)</td>
-		<td class="td_bgc right_2"><input name="domain" type="text" id='tb_wid3'
-			value="{{if $vhostproduct}}{{$vhostproduct.domain}}{{else}}-1{{/if}}"></td>
-	</tr>
-
-
-
-	
-	<tr>
-		<td class="td_bgc right_2">最大连接数(0无限)</td>
-		<td class="td_bgc right_2"><input name="max_connect" type="text"
-			size='5' value="{{if $vhostproduct}}{{$vhostproduct.max_connect}}{{else}}0{{/if}}">
-		</td>
-	</tr>
-	<tr>
-		<td class="td_bgc right_2">带宽限制(0无限)</td>
-		<td class="td_bgc right_2"><input name="speed_limit" type="text"
-			size='5' value="{{if $vhostproduct}}{{$vhostproduct.speed_limit/1024}}{{else}}0{{/if}}">&nbspK/每秒
-		</td>
-	</tr>
-	<tr>
-		<td class="td_bgc right_2">管理变量:</td>
-		<td class="td_bgc right_2"><input name="envs" type="text" id='tb_wid3'
-			value="{{$vhostproduct.envs}}" size="40"></td>
-	</tr>
-	<tr>
-		<td class="td_bgc right_2">其它选项</td>
-		<td class="td_bgc right_2">
-			<input type='checkbox' name='htaccess' value='1' {{if $vhostproduct.htaccess || !$vhostproduct}}checked{{/if}}>.htaccess支持
-			<input type='checkbox' name='ftp' value='1' {{if $vhostproduct.ftp || !$vhostproduct}}checked{{/if}}>开启ftp
-			<input type='checkbox' name='log_file' value='1' {{if $vhostproduct.log_file || !$vhostproduct}}checked{{/if}}>日志独立
-			<input type='checkbox' name='access' value='1' {{if $vhostproduct.access || !$vhostproduct}}checked{{/if}}>自定义控制
-		</td>
-	</tr>
-	<tr>
-		<td class="td_bgc right_2">产品说明(支持html):</td>
-		<td class="td_bgc right_2"><textarea name='describe' rows='6' cols='40'>{{$vhostproduct.describe}}</textarea></td>
-	</tr>
-	<tr>
-
-		<td class="td_bgc right_2">状态</td>
-		<td class="td_bgc right_2">
-		<input type="checkbox" name="pause_flag" value="1" {{if $vhostproduct.pause_flag!=0}}checked{{/if}}>暂停销售
-		<input type="checkbox" name="month_flag" value="1" {{if $vhostproduct.month_flag!=0}}checked{{/if}}>月付
-		</td>
-	</tr>
-	<tr>
-		<td class="td_bgc td_hg" colspan="2" align="center"><input
-			type="submit" value="确认提交"></td>
-	</tr>
-</table>
-</div>
-</form>
 </div>
 <script language='javascript'>
 changeNode();
