--- a/admin/view/default/vhostproduct/listVhost.html
+++ b/admin/view/default/vhostproduct/listVhost.html
@@ -1,93 +1,82 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="container">
-	<div align="center">
-	 	
-	<div class="mar_top tb_wid5" align="right">
-	<div align="left">
-		<form name="form1" method="post" action="?c=vhost&a=showVhost">
-			<p>
-  			 <span class="topimg STYLE1">输入用户名或#uid:</span>
-   			<input name="user" type="text" id="user" value="{{$user}}" size="25">
-   			<input type="submit" name="Submit" value="搜索">
- 			 </p>
-   		</form>
-   		</div>
-			{{if $page>1}}
-			<a href='?c=vhost&a=pageVhost&page=0'>首页</a> 
-			<a href='?c=vhost&a=pageVhost&page={{$page-1}}'>上一页</a> 
-			{{else}}
-			首页 上一页 
-			{{/if}}
-			{{if $page!=$total_page}} 
-			<a href='?c=vhost&a=pageVhost&page={{$page+1}}'>下一页</a>
-			<a href='?c=vhost&a=pageVhost&page={{$total_page}}'>尾页</a>
-			{{else}}下一页 尾页
-			{{/if}} 
-			{{$page}}/{{$total_page}}&nbsp;
-			共计{{$count}}记录
-		</div>
-		<div class="block tb_wid5">
-			<table id="table" border="0" cellpadding="0" cellspacing="1">
-				<tr id="ttitle">
-					<td class="td_bgc right_2">操作</td>
-					<td class="td_bgc right_2">用户名</td>
-					<td class="td_bgc right_2">产品名称</td>
-					<td class="td_bgc right_2">uid</td>
-					<td class="td_bgc right_2">所属用户</td>
-					<td class="td_bgc right_2">模板</td>
-					<td class="td_bgc right_2">服务器</td>
-					<td class="td_bgc right_2">流量(M)</td>
-					<td class="td_bgc right_2">创建时间</td>
-					<td class="td_bgc right_2">过期时间</td>
-					<td class="td_bgc right_2">空间状态</td>					
-					</tr>
-					{{foreach from=$list item=row}}
-					<form action='?c=vhost&a=setStatus&name={{$row.name}}' method='post' name='status_{{$row.uid}}form'>
-				<tr>
-					<td class="td_bgc right_2">
-						[<a href='javascript:if(confirm("真的要删除空间吗,此操作将导致数据无法恢复,如果你只是想关闭空间，可以把该空间的状态改为暂停")){ window.location="?c=vhost&a=del&name={{$row.name}}";}'>删除</a>]
-						[<a href="?c=vhost&a=resync&name={{$row.name}}">重建</a>]
-					</td>
-					<td class="td_bgc right_2">{{$row.name}}</td>
-					<td class="td_bgc right_2">{{$row.product_name}}</td>
-					<td class="td_bgc right_2">{{$row.uid}}</td>
-					<td class="td_bgc right_2"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
-					<td class="td_bgc right_2">{{$row.templete}}</td>
-					<td class="td_bgc right_2">{{$row.node}}</td>
-					<td class="td_bgc right_2">{{$row.flow}}</td>
-					<td class="td_bgc right_2">{{$row.create_time}}</td>
-					<td class="td_bgc right_2">{{$row.expire_time}}</td>
-					<td class="td_bgc right_2">
-						<select name='status' onChange="javascript:status_{{$row.uid}}form.submit()">
-						{{for $i=0; $i<2; $i++}}
-						<option value='{{$i}}' {{if $i==$row.status}} selected {{/if}}>
-						{{if $i==0}}正常{{else}}暂停{{/if}}
-						</option>
-						{{/for}}
-						</select>
-						</td>
-					</tr>
-					</form>
-					{{/foreach}}
-		  </table>
-		</div>
-			<div class="mar_top tb_wid5" align="right">
-			{{if $page>1}}
-			<a href='?c=vhost&a=pageVhost&page=0'>首页</a> 
-			<a href='?c=vhost&a=pageVhost&page={{$page-1}}'>上一页</a> 
-			{{else}}
-			首页 上一页 
-			{{/if}}
-			{{if $page!=$total_page}} 
-			<a href='?c=vhost&a=pageVhost&page={{$page+1}}'>下一页</a>
-			<a href='?c=vhost&a=pageVhost&page={{$total_page}}'>尾页</a>
-			{{else}}下一页 尾页
-			{{/if}} 
-			{{$page}}/{{$total_page}}&nbsp;
-			共计{{$count}}记录
-		</div>
-		</div>
+<div align="center">
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：虚拟主机/cdn --> 用户列表</div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+			<form name="form1" method="post" action="?c=vhost&a=showVhost">
+			<tr>
+				<td colspan="11" class="bg_yellow hg_main">
+					<span class="topimg STYLE1">输入用户名或#uid:</span>
+					<input name="user" type="text" id="user" value="{{$user}}" size="25">
+					<input type="submit" name="Submit" value="搜索">
+				</td>
+			</tr>
+			</form>
+			<tr>
+				<td colspan="11" class="bg_main"><b>用户列表</b></td>
+			</tr>
+			<tr class="bg_yellow">
+				<td>操作</td>
+				<td>用户名</td>
+				<td>产品名称</td>
+				<td>uid</td>
+				<td>所属用户</td>
+				<td>模板</td>
+				<td>服务器</td>
+				<td>流量(M)</td>
+				<td>创建时间</td>
+				<td>过期时间</td>
+				<td>空间状态</td>					
+			</tr>
+				{{foreach from=$list item=row}}
+			<form action='?c=vhost&a=setStatus&name={{$row.name}}' method='post' name='status_{{$row.uid}}form'>
+			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<td>
+					[<a href='javascript:if(confirm("真的要删除空间吗,此操作将导致数据无法恢复,如果你只是想关闭空间，可以把该空间的状态改为暂停"))
+					{ window.location="?c=vhost&a=del&name={{$row.name}}";}'>删除</a>]
+					[<a href="?c=vhost&a=resync&name={{$row.name}}">重建</a>]
+				</td>
+				<td>{{$row.name}}</td>
+				<td>{{$row.product_name}}</td>
+				<td>{{$row.uid}}</td>
+				<td><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
+				<td>{{$row.templete}}</td>
+				<td>{{$row.node}}</td>
+				<td>{{$row.flow}}</td>
+				<td>{{$row.create_time}}</td>
+				<td>{{$row.expire_time}}</td>
+				<td>
+					<select name='status' onChange="javascript:status_{{$row.uid}}form.submit()">
+					{{for $i=0; $i<2; $i++}}
+					<option value='{{$i}}' {{if $i==$row.status}} selected {{/if}}>
+					{{if $i==0}}正常{{else}}暂停{{/if}}
+					</option>
+					{{/for}}
+					</select>
+				</td>
+			</tr>
+			</form>
+			{{/foreach}}
+		<tr>
+			<td colspan="11" class="bg_yellow" align="right">
+				{{if $page>1}}
+				<a href='?c=vhost&a=pageVhost&page=0'>首页</a> 
+				<a href='?c=vhost&a=pageVhost&page={{$page-1}}'>上一页</a> 
+				{{else}}
+				首页 上一页 
+				{{/if}}
+				{{if $page!=$total_page}} 
+				<a href='?c=vhost&a=pageVhost&page={{$page+1}}'>下一页</a>
+				<a href='?c=vhost&a=pageVhost&page={{$total_page}}'>尾页</a>
+				{{else}}下一页 尾页
+				{{/if}} 
+				{{$page}}/{{$total_page}}&nbsp;
+				共计{{$count}}记录&nbsp;
+			</td>
+		</tr>
+	 </table>
+	</div>
 </div>
 </body>
 </html>
