--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -69,83 +69,79 @@ function updateViewResult()
 	}
 }
 </script>
-<div style="float:center">
- <div class="padd mar_top"></div>
- <div align="center">
-  <div id="main" class="wid" > 
-  	<div class="mar_top" align="right">
-		  <table width="100%" border="0" cellpadding="0" cellspacing="0">
-		  <form action='?c={{$smarty.request.c}}&a={{$smarty.request.a}}' method='post' name='product_form'>
-			  <tr>
-				<td class="right" align="left">
-				  [<a href='?c=vhostproduct&a=flush'>更新配置文件</a>]
-				  [<a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a>]
-				  <select name='product_flag' onChange="javascript:product_form.submit();">
-				  <option value='0' {{if $product_flag==0}}selected{{/if}}>所有产品</option>
-				  <option value='1' {{if $product_flag==1}}selected{{/if}}>暂停产品</option>
-				  <option value='2' {{if $product_flag==2}}selected{{/if}}>可销售产品</option>
-				  </select>
+<div align="center">
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：虚拟主机/cdn --> 产品列表</div>
+		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+			  <form action='?c={{$smarty.request.c}}&a={{$smarty.request.a}}' method='post' name='product_form'>
+				<tr>
+					<td colspan="12" class="bg_main hg_main">
+					  <a href='?c=vhostproduct&a=flush'><b>[更新配置文件]</b></a>
+					  <a href="?c=vhostproduct&a=addProductForm" target='main'><b>[增加产品]</b></a>
+					  <select name='product_flag' onChange="javascript:product_form.submit();">
+					  <option value='0' {{if $product_flag==0}}selected{{/if}}>所有产品</option>
+					  <option value='1' {{if $product_flag==1}}selected{{/if}}>暂停产品</option>
+					  <option value='2' {{if $product_flag==2}}selected{{/if}}>可销售产品</option>
+					  </select>
+					</td>
+				 </tr>
+				 </form>
+				<tr class="bg_yellow">
+					<td>操作</td>
+					<td>显示顺序</td>
+					<td>产品ID</td>
+					<td>产品</td>
+					<td>主机</td>
+					<td>空间(M)</td>
+					<td>数据库(M)</td>
+					<td>价格(元/年)</td>	
+					<td>绑定域名</td>	
+					<td>绑定子目录</td>	
+					<td>模板</td>		
+					<td>状态</td>    
+				</tr>
+				{{foreach from=$list item=row}}
+				<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+					<td>
+						[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=vhostproduct&a=del&id={{$row.id}}';}" title="删除">删除</a>]
+						[<a href="?c=vhostproduct&a=editProductForm&id={{$row.id}}">更改</a>]
+					</td>
+					<td>
+						<input type='checkbox' id='view{{$row.id}}' onClick="updateView(this.id,{{$row.id}})" name='view' value='{{$row.view}}' {{if $row.view}}checked{{/if}}>
+				  {{$row.view}}
+					</td>
+	
+				<td>{{$row.id}}</td>
+				<td>{{$row.name}}</td>
+				<td>
+					<select id='node{{$row.id}}' name='node' onChange="changeNode('{{$row.id}}','{{$row.templete}}')">
+					{{foreach from=$nodes item=node}}
+					<option value='{{$node.name}}' {{if $row.node==$node.name}}selected{{/if}} title='{{$node.nickname}}'>
+					{{$node.name}}
+					</option>
+					{{/foreach}}
+					</select>
+					<div id='busy{{$row.id}}'></div>
 				</td>
-				<td align="right">共计 {{$sum}} 条记录</td>
-			  </tr>
-			 </form>
-	    </table>
-	</div>
-   		<table cellpadding=0 cellspacing=1 id="table">
-      	<tr id="ttitle">
-	        <td class='color01 right' bgcolor='#efefef'>操作</td>
-	        <td class='color01 right' bgcolor='#efefef'>显示顺序</td>
-		   	<td class='color01 right' bgcolor='#efefef' width="60">产品ID</td>
-	        <td class='color01 right' bgcolor='#efefef'>产品</td>
-	        <td class='color01 right' bgcolor='#efefef'>主机</td>
-			<td class='color01 right' bgcolor='#efefef'>空间(M)</td>
-			<td class='color01 right' bgcolor='#efefef'>数据库(M)</td>
-			<td class='color01 right' bgcolor='#efefef'>价格(元/年)</td>	
-			<td class='color01 right' bgcolor='#efefef'>绑定域名</td>	
-			<td class='color01 right' bgcolor='#efefef'>绑定子目录</td>	
-			<td class='color01 right' bgcolor='#efefef'>模板</td>		
-			<td class='color01 right' bgcolor='#efefef'>状态</td>    
-     	</tr>
-	  	{{foreach from=$list item=row}}
-     	<tr>
-	        <td class="right">
-	        	[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=vhostproduct&a=del&id={{$row.id}}';}" title="删除">删除</a>]
-	       		[<a href="?c=vhostproduct&a=editProductForm&id={{$row.id}}">更改</a>]
-			</td>
-	        <td class="right">
-	        	<input type='checkbox' id='view{{$row.id}}' onClick="updateView(this.id,{{$row.id}})" name='view' value='{{$row.view}}' {{if $row.view}}checked{{/if}}>
-	      {{$row.view}}
-	        </td>
-
-        	<td class="right">{{$row.id}}</td>
-			<td class="right">{{$row.name}}</td>
-			<td class="right">
-				<select id='node{{$row.id}}' name='node' onChange="changeNode('{{$row.id}}','{{$row.templete}}')"">
-				{{foreach from=$nodes item=node}}
-				<option value='{{$node.name}}' {{if $row.node==$node.name}}selected{{/if}} title='{{$node.nickname}}'>
-				{{$node.name}}
-				</option>
-				{{/foreach}}
-				</select>
-				<div id='busy{{$row.id}}'></div>
-			</td>
-			<td class="right">{{if $row.cdn}}cdn{{else}}{{$row.web_quota}}{{/if}}</td>
-			<td class="right">{{if $row.cdn}}-{{else}}{{$row.db_quota}}{{/if}}</td>
-			<td class="right">{{$row.price/100}}</td>
-			<td class="right">{{$row.domain}}</td>
-			<td class="right">{{if $row.cdn}}-{{else}}{{if $row.subdir_flag}}允许{{/if}} {{$row.subdir}}{{/if}}</td>
-			<td class="right">{{$row.templete}}
-				{{if $row.subtemplete}}:{{$row.subtemplete}}{{/if}}
-			</td>
-			<td class="right">
-				{{if $row.pause_flag!=0}}暂停销售 {{/if}}
-				{{if $row.month_flag!=0}}月付 {{/if}}
-			</td>
-	        </td>
-      	</tr>
-	  	{{/foreach}}
+				<td>{{if $row.cdn}}cdn{{else}}{{$row.web_quota}}{{/if}}</td>
+				<td>{{if $row.cdn}}-{{else}}{{$row.db_quota}}{{/if}}</td>
+				<td>{{$row.price/100}}</td>
+				<td>{{$row.domain}}</td>
+				<td>{{if $row.cdn}}-{{else}}{{if $row.subdir_flag}}允许{{/if}} {{$row.subdir}}{{/if}}</td>
+				<td>{{$row.templete}}
+					{{if $row.subtemplete}}:{{$row.subtemplete}}{{/if}}
+				</td>
+				<td>
+					{{if $row.pause_flag!=0}}暂停销售 {{/if}}
+					{{if $row.month_flag!=0}}月付 {{/if}}
+				</td>
+				</td>
+			</tr>
+			{{/foreach}}
+			<tr>
+				<td colspan="12" class="bg_yellow" align="right">共计 {{$sum}} 条记录&nbsp;	</td>
+			</tr>
     	</table>
-  </div>
   </div>
 </div>
 </body>
